@startuml
class ADSV_AI {
    - _errorFlag : bool
    - _previousSpeed : float
    - Awake() : void
    - Start() : void
    - Update() : void
    - FixedUpdate() : void
    - OnDestroy() : void
    - UpdateStateMachine() : void
    + SetTarget(position:Vector3) : void
    + GetState() : string
    + TriggerError() : void
    - DetectErrors() : void
    - DoErrorDetected() : void
    - DoWaitingForAid() : void
}
enum States {
    Initializing,
    NoCommand,
    Driving,
    ErrorDetected,
    WaitingForAid,
}
class "BaseStateMachine`1"<T> {
}
"BaseStateMachine`1" "<States>" <|-- ADSV_AI
ADSV_AI --> "navigationProvider" NavigationProvider
ADSV_AI --> "target" Transform
ADSV_AI --> "topDownCamera" Camera
ADSV_AI --> "povCamera" Camera
ADSV_AI --> "currentMission" Mission
@enduml
